[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://assets/art_assets/allSprites_default.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 546, 160, 8, 26 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.2912, 4.69647 )

[node name="PlayerBullet" type="Area2D"]
collision_layer = 512
collision_mask = 113
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Despawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_LifeTime_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
